# nexus-downloader

./: .gitignore  README.md  nexusdownloader.cabal  stack.yaml  testbundle.json
src/: App.hs  Extra.hs  Main.hs  Types.hs
src/Extra/: Instances.hs
src/Nexus/: API.hs  Types.hs
